objects/Jira_Comments__c.object
<CustomObject>
    <fields>
        <fullName>Bug__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Jira Bug</inlineHelpText>
        <label>Bug</label>
        <referenceTo>Bug__c</referenceTo>
        <relationshipLabel>Jira Comments</relationshipLabel>
        <relationshipName>Jira_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment_Direction__c</fullName>
        <label>Comment Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SF -&gt; Jira</fullName>
                </value>
                <value>
                    <fullName>Jira -&gt; SF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Commitment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Commitment</label>
        <referenceTo>Customer_Commitments__c</referenceTo>
        <relationshipLabel>Jira Comments</relationshipLabel>
        <relationshipName>Jira_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>date and time of comment</inlineHelpText>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Jira_Comment__c</fullName>
        <label>Jira Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Jira Comments</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Jira Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jira Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>